[package]
name = "efg"
version = "0.1.3"
authors = ["David Tolnay <dtolnay@gmail.com>"]
description = "Conditional compilation using boolean expression syntax, rather than any(), all(), not()."
documentation = "https://docs.rs/efg"
edition = "2018"
license = "MIT OR Apache-2.0"
repository = "https://github.com/dtolnay/efg"
rust-version = "1.55"

[lib]
proc-macro = true

[dev-dependencies]
rustversion = "1.0"
trybuild = { version = "1.0.49", features = ["diff"] }

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
